Startup Crash using newsgroup after View > Threads > Unread
Categories
(Thunderbird :: General, defect)
Tracking
(thunderbird_esr91+ verified)
People
(Reporter: wsmwk, Assigned: mkmelin)
References
(Blocks 3 open bugs, )
Details
(4 keywords)
Crash Data
Attachments
(1 file)
48 bytes,
text/x-phabricator-request
|
wsmwk
:
approval-comm-esr91+
|
Details | Review |
- Use Version 91 or 93.
- click on a newsgroup
- View > Threads > Unread
Results:
- Mac terminal shows "Exiting due to channel error."
- Crash reporter
- Crash reporter fails - "There was a problem submitting your report" - perhaps because of OOM?
This is reported by Windows user in Newsgroups: alt.comp.software.thunderbird Subject: Upgrade to 91.1.1 doesn't like my NNTP server
Reporter | ||
Comment 1•11 months ago
•
|
||
(Sancus fixed the crash reporting problem.)
There are several choices on the "View > Thread", "Unread" is the ONLY one which crashes. Earliest crash I found is version 88 buildid 20210412182002 bp-a60173f9-56bb-4d3d-a70d-c94100210418
nsMsgThreadedDBView::InitThreadedView bp-0dfdd86d-78a8-46f3-b7f3-83cfd0210926 my crash on Mac with 93 beta
Reporter | ||
Comment 2•11 months ago
|
||
version 88 buildid 20210412182002 would be 88.0b3
- uplifts to b3 https://bugzilla.mozilla.org/buglist.cgi?bug_id=1702035%2C1702433%2C1702741%2C1702193%2C1701864%2C1701804%2C1701389%2C1692771%2C1702360%2C1237571%2C1701741&list_id=15848920
- uplifts to b2 https://bugzilla.mozilla.org/buglist.cgi?bug_id=1679730%2C1676094%2C1700764%2C1700128%2C1698993%2C1701450%2C1701525%2C1682101%2C1692899%2C1666296%2C1700440%2C1700506%2C1699051&list_id=15848921
Or perhaps caused by one of these https://mzl.la/39DiX5Z ?
Reporter | ||
Updated•11 months ago
|
Assignee | ||
Comment 3•11 months ago
|
||
Crash at https://searchfox.org/comm-central/rev/cb5cd1e59e7a27e945dacea9f295e538a80bcb36/mailnews/base/src/nsMsgThreadedDBView.cpp#138. Maybe from bug 1682942 but didn't go checking.
Assignee | ||
Comment 4•11 months ago
|
||
But the WantsThisThread() call should basically fix it.
I can't reproduce the crash so there must some other factor playing in as well.
Assignee | ||
Comment 5•11 months ago
|
||
Ah, but that checks threadHdr not msgHdr.
Assignee | ||
Comment 6•11 months ago
|
||
Reporter | ||
Comment 7•11 months ago
|
||
Changing severity to S3 because not a common crash.
Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/bd04c2bb4b2d
fix Crash using newsgroup after View > Threads > Unread. r=benc
Assignee | ||
Updated•11 months ago
|
Assignee | ||
Comment 9•10 months ago
|
||
Comment on attachment 9242990 [details]
Bug 1732549 - fix Crash using newsgroup after View > Threads > Unread. r=benc
[Approval Request Comment]
Crash fix, fairly safe.
Reporter | ||
Comment 10•10 months ago
|
||
Comment on attachment 9242990 [details]
Bug 1732549 - fix Crash using newsgroup after View > Threads > Unread. r=benc
[Triage Comment]
Approved for esr91
Reporter | ||
Updated•10 months ago
|
Comment 11•10 months ago
|
||
bugherderuplift |
Thunderbird 91.2.1:
https://hg.mozilla.org/releases/comm-esr91/rev/aafe89f8ddb9
Reporter | ||
Comment 12•10 months ago
|
||
I can see in crash-stats there are no reports from 91.2.1, so v.fixed
Description
•