Bug 1732549 - fix Crash using newsgroup after View > Threads > Unread. r=benc

Differential Revision: https://phabricator.services.mozilla.com/D126638

--HG--
extra : rebase_source : ea9fc7df3c32e2711ea81cbfa3d91aa72d6d9a18